--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/styles/community.applications.css
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/styles/community.applications.css
@@ -15,6 +15,13 @@ body.stop-scrolling {
   overflow: hidden !important;
 }
 
+.subCategory ul {
+  padding-left: 20px;
+}
+li.subCategory {
+  margin-top: -0.5rem;
+}
+
 p {
   margin: auto;
   text-align: left;
