--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/themes/theme-black.css
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/themes/theme-black.css
@@ -1,21 +1,26 @@
 :root {
-    --donate-background: #ffffff;
-    --donate-text: #000000;
-    --template-background: #191818;
-    --template-hover-background: #121212;
-    --template-favourite: #333333;
-    --hr-color: #2b2b2b;
-    --border-color: #2b2b2b;
-    --watermark-color: rgba(43, 43, 43, 0.4);
-    --a-color: #00b8d6;
-    --sidebar-background: #000000;
-    --sidebar-text: #f2f2f2;
-    --beta-popup-offset: 0;
-    --support-popup-text: #000000;
-    --support-popup-background: #ffffff;
-    --mod-comment-border: #cf3131;
-    --sidebar-close-background: rgba(0,0,0,0.7);
-    --unraid-66-color: #FF8C2F;
-    --link-color: #486dba;
-    --startup-color: #FF8C2F;
+  --donate-background: #ffffff;
+  --donate-text: #000000;
+  --template-background: #191818;
+  --template-hover-background: #121212;
+  --template-favourite: #333333;
+  --hr-color: #2b2b2b;
+  --border-color: #2b2b2b;
+  --watermark-color: rgba(43, 43, 43, 0.4);
+  --a-color: #00b8d6;
+  --sidebar-background: #000000;
+  --sidebar-text: #f2f2f2;
+  --beta-popup-offset: 5rem;
+  --support-popup-text: #000000;
+  --support-popup-background: #ffffff;
+  --mod-comment-border: #cf3131;
+  --sidebar-close-background: rgba(0,0,0,0.7);
+  --unraid-66-color: #FF8C2F;
+  --link-color: #486dba;
+  --startup-color: #FF8C2F;
+  --ca-legacy-background-color: #1d1b1b;
+  --search-area-top: 4rem;
+  --search-area-left: 19.5rem;
+  --search-area-mobile-left: initial;
+  --search-area-mobile-top: 0;
 } 
